# sherpa

./: .env  .github_changelog_generator  .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  buildspec.prod.yml
demo/blog_writer/: .env.sample  README.md  actions.py  agent_config.yml  app.py  main.py  outliner.py  pyproject.toml  requirements.txt  transcribe.py
demo/blog_writer/Output/: blog_transcript_chrisd.md  blog_transcript_chrisd_short.md  blueprint_sample.json  blueprint_transcript_chrisd.json  blueprint_transcript_chrisd_short.json
demo/blog_writer/Transcripts/: blog_transcript.md  test.txt  transcript_chrisd.txt  transcript_chrisd_short.txt
demo/summarize_question_answering/: actions.py  agent_config.yml  app.py  main.py  pyproject.toml  states.py
src/: .env-sample  .gitignore  Makefile  README.md  demo.ipynb  docker-compose.yml  pyproject.toml
src/apps/slackapp/: Dockerfile  Makefile  README.md  log.txt  pyproject.toml  token_countersaa.db
src/conf/: config.yaml  pricing_config.json
src/sherpa/: bolt_app.py  config.py  reflection.py  vectorstores.py
src/sherpa/action_planner/: __init__.py  selective_planner.py
src/sherpa/database/: user_usage_tracker.py
src/sherpa/error_hanlding/: __init__.py
src/sherpa/models/: sherpa_base_chat_model.py  sherpa_base_model.py
src/sherpa/output_parsers/: __init__.py  base.py  link_parse.py  md_to_slack_parse.py
src/sherpa/scrape/: extract_github_readme.py
src/sherpa/verbose_loggers/: __init__.py  verbose_loggers.py
src/sherpa_ai/: citation_validation.py  config.py  dev-requirements.txt  events.py  orchestrator.py  output_parser.py  post_processors.py  prompt.py  prompt_generator.py  reflection.py  task_agent.py  tools.py  utils.py  vectorstores.py
src/sherpa_ai/action_planner/: __init__.py  action_planner.py  base.py  selective_planner.py  simple_planner.py
src/sherpa_ai/actions/: __init__.py  answer_arithmetic.py  arxiv_search.py  base.py  belief_actions.py  chain_actions.py  context_search.py  deliberation.py  dynamic.py  empty.py  entity_validation.py  exceptions.py  github.py  google_search.py  linear.py  link_content_scraper.py  link_scraper.py  math_prompt.py  mock.py  number_validation.py  planning.py  reranking.py  sherpa_mcp_adapter.py  synthesize.py
src/sherpa_ai/agents/: __init__.py  agent_pool.py  agent_serializer.py  agent_storage.py  base.py  critic.py  mathematician.py  mcp_agent.py  ml_engineer.py  persistent_agent_pool.py  physicist.py  planner.py  pr_analyzer_agent.py  programmer.py  qa_agent.py  task_agent.py  user.py  user_agent_manager.py
src/sherpa_ai/config/: __init__.py  task_config.py  task_result.py
src/sherpa_ai/connectors/: ChromaVectorStore.py  base.py  chroma_vector_store.py  vectorstores.py
src/sherpa_ai/cost_tracking/: backup.py  cli.py  logger.py  pricing.py  reporting.py
src/sherpa_ai/database/: __init__.py  user_usage_tracker.py
src/sherpa_ai/error_handling/: __init__.py  agent_error_handler.py
src/sherpa_ai/error_hanlding/: __init__.py
src/sherpa_ai/mcp/: sherpa_mcp_adapter.py
src/sherpa_ai/memory/: __init__.py  belief.py  events.py  shared_memory.py  shared_memory_with_vectordb.py  state_machine.py  utils.py
src/sherpa_ai/models/: __init__.py  chat_model_with_logging.py  sherpa_base_chat_model.py  sherpa_base_model.py  sherpa_logger_chat_model.py
src/sherpa_ai/output_parsers/: __init__.py  base.py  citation_validation.py  entity_validation.py  link_parse.py  md_to_slack_parse.py  number_validation.py  validation_result.py
src/sherpa_ai/policies/: __init__.py  agent_feedback_policy.py  base.py  chat_sm_policy.py  exceptions.py  react_policy.py  react_sm_policy.py  selective_planner.py  utils.py
src/sherpa_ai/prompts/: Base.py  prompt_loader.py  prompt_template.py  prompt_template_loader.py  prompts.json
src/sherpa_ai/runtime/: __init__.py  threaded_runtime.py
src/sherpa_ai/scrape/: extract_github_readme.py  file_scraper.py  prompt_reconstructor.py
src/sherpa_ai/status_loggers/: base.py  status_loggers.py
src/sherpa_ai/test_utils/: data.py  llms.py  loggers.py
src/sherpa_ai/verbose_loggers/: __init__.py  base.py  verbose_loggers.py
src/tests/: conftest.py
src/tests/data/: agent_feedback_policy_test_test_agent_feedback_policy.jsonl  prompts.json  test_answer_arithmetic_test_answer_arith.jsonl  test_answer_arithmetic_test_answer_arith_placeholder.jsonl  test_chat_based_policy_test_chat_based_policy.jsonl  test_chat_based_policy_test_chat_based_policy_with_agent.jsonl  test_chat_based_policy_test_policy_prompts.jsonl  test_citation_validation_test_google_search.jsonl  test_citation_validation_test_task_agent_succeeds.jsonl  test_context_search_test_context_search_succeeds.jsonl  test_critic_agent_test_evaluation_matrices_succeeds.jsonl  test_critic_agent_test_evaluation_matrices_successful.jsonl  test_critic_agent_test_get_feedback_succeeds.jsonl  test_critic_agent_test_get_feedback_successful.jsonl  test_entity_citation_validator_as_action_test_entity_citation_succeeds_in_qa_0.jsonl  test_entity_citation_validator_test_entity_citation_succeeds_in_qa.jsonl  test_entity_citation_validator_test_entity_citation_succeeds_in_qa_0.jsonl  test_entity_citation_validator_test_entity_citation_succeeds_in_qa_1.jsonl  test_feedback_policy_in_qa_test_feedback_policy_in_qa_0.jsonl  test_feedback_policy_in_qa_test_feedback_policy_in_qa_complete_0.jsonl  test_feedback_policy_in_qa_test_feedback_policy_in_qa_incomplete_0.jsonl  test_link_scraper_action_t_0.jsonl  test_link_scraper_action_t_1.jsonl  test_ml_engineer_test_ml_engineer_succeeds.jsonl  test_ml_engineer_test_ml_engineer_successful.jsonl  test_number_citation_validation_action_test_number_citation_succeeds_in_qa.jsonl  test_number_citation_validator_test_number_citation_succeeds_in_qa_0.jsonl  test_number_citation_validator_test_number_citation_succeeds_in_qa_1.jsonl  test_number_citation_validator_test_number_citation_succeeds_in_qa_2.jsonl  test_number_citation_validator_test_number_citation_succeeds_in_qa_3.jsonl  test_orchestrator_test_planning.jsonl  (+38 more)
(+394 files in other folders)
