[tool.poetry]
name = "sherpa-ai"
version = "v0.3.3"
description = "Sherpa: AI-augmented thinking companion"
authors = []
readme = "README.md"
repository = "https://github.com/Aggregate-Intellect/sherpa"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "0.2.5"
langchain-community = "0.2.5"
python-dotenv = "^1.0.0"
unstructured = "^0.10.11"
langchain-openai = "0.1.13"
openai = "1.35.7"
chromadb = "^0.4.8"
tiktoken = ">=0.6.0,<1.0"
pinecone-client = "^2.2.2"
beautifulsoup4 = "4.12.2"
markdown = ">=3.4.4,<3.5.0"
loguru = ">=0.7.0,<0.8.0"
boto3 = "^1.28.77"
pypdf = "^3.17.0"
transformers = "^4.35.2"
pydantic = "^2.5.3"
hydra-core = "^1.3.2"
word2number = "^1.1"
spacy = "^3.7.4"
transitions = "^0.9.2"
pydash = "^8.0.3"

[tool.poetry.group.test.dependencies]
pytest = "7.4.0"
pytest-cov = "^4.1.0"
en_core_web_sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl"}

[tool.poetry.group.lint.dependencies]
bandit = "^1.7.8"
black = "^23.7.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
flake8-pyproject = "^1.2.3"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
markers = [
  "external_api:  this test calls 3rd party APIs"
]

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
ignore  = ['F401', 'W503', 'E501']

[tool.isort]
profile = "black"
skip_gitignore = true