[tool.poetry]
name = "summarize-question-answering"
version = "0.1.0"
description = ""
authors = ["Sami Negash <smlnegash@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
chainlit = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
