[tool.poetry]
name = "slackapp"
version = "0.1.0"
description = "Slack bot using sherpa-ai"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
slack-bolt = "^1.18.0"
flask-cors = "^4.0.0"
flask = "^2.3.3"
loguru = "^0.7.0"
sherpa-ai = {path = "../..", develop = true}
hydra-core = "^1.3.2"

[tool.poetry.scripts]
sherpa_slack = 'slackapp.bolt_app:main'

[tool.poetry.group.test.dependencies]
pytest = "7.4.0"

[tool.poetry.group.lint.dependencies]
black = "23.7.0"
flake8 = "6.1.0"
isort = "5.12.0"
flake8-pyproject = "1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
markers = [
  "external_api:  this test calls 3rd party APIs"
]

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
ignore  = ['F401', 'W503']
per-file-ignores = [
    'bolt_app.py:E402',
]

[tool.isort]
profile = "black"
skip_gitignore = true